# dify_tester

./: .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md
.claude/: settings.json  superclaude.commands.cn.md
.cursor/rules/: fastapi.mdc  git_commit.mdc  index.mdc  jest.mdc  pytest.mdc  ruff.mdc  uv.mdc  workflow.mdc
.windsurf/rules/: fastapi.md  git_commit.md  index.md  jest.md  pytest.md  ruff.md  uv.md  workflow.md
api/: main.py  pyproject.toml
docs/: DIFY_API_DATA_STRUCTURES_GUIDE.md
web/: .prettierignore  .prettierrc.json  eslint.config.mjs  jest.config.js  jest.setup.js  package.json  pnpm-lock.yaml
web/.husky/: pre-commit
web/app/: page.tsx
