[project]
name = "dify-tester-api"
version = "0.1.0"
description = "Dify API Testing Backend Service"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Core web framework and server
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    
    # HTTP client for Dify API integration
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    
    # Data validation
    "pydantic>=2.11.0",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-xdist>=3.8.0",
    
    # Code quality
    "ruff>=0.12.4",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--cov=app", "--cov-report=term-missing"]
